pandas whether dataset

--- a/advanced/numpympl.ipynb
+++ b/advanced/numpympl.ipynb
@@ -2309,7 +2309,9 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_rainfall = [get_mean_rainfall(m) for m in list_of_months]"
