--- a/advanced/Classes.ipynb
+++ b/advanced/Classes.ipynb
@@ -1933,6 +1933,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### class decorator ###\n",
+    "suppose you want to tweak methods of a class! may be decorate all methods with debug!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import wraps, partial\n",
+    "def debug(func):\n",
+    "    prefix = \"*\"*5\n",
+    "    msg = prefix + func.__qualname__\n",
+    "    \n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print(msg)\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "\n",
+    "def debugmethods(cls):\n",
+    "    for name, val in vars(cls).items():\n",
+    "        if callable(val):\n",
+    "            setattr(cls, name, debug(val))\n",
+    "    return cls\n",
+    "\n",
+    "@debugmethods\n",
+    "class Foo:\n",
+    "    x = \"dummy\"\n",
+    "    def method1(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def method2(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def method3(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = Foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dummy'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Foo.method1\n"
+     ]
+    }
+   ],
+   "source": [
+    "f.method1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### properties ###"
    ]
   },
@@ -3208,6 +3298,13 @@
     "\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
