multithreading few examples

--- a/advanced/Classes.ipynb
+++ b/advanced/Classes.ipynb
@@ -1940,7 +1940,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from functools import wraps, partial\n",
@@ -1976,7 +1978,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = Foo()"
@@ -3132,177 +3136,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Starting and Stopping Threads ###"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "class CountdownTask:\n",
-    "    def __init__(self):\n",
-    "        self._running = True\n",
-    "\n",
-    "    def terminate(self):\n",
-    "        self._running = False\n",
-    "\n",
-    "    def run(self, n):\n",
-    "        while self._running and n > 0:\n",
-    "            print('T-minus', n)\n",
-    "            n -= 1\n",
-    "            time.sleep(5)\n",
-    "        print(\"Stopping, Bye!\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T-minus 10\n",
-      "T-minus 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "from threading import Thread\n",
-    "c = CountdownTask()\n",
-    "t = Thread(target=c.run, args=(10,))\n",
-    "t.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping, Bye!\n"
-     ]
-    }
-   ],
-   "source": [
-    "c.terminate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T-minus 10\n",
-      "T-minus 9\n",
-      "T-minus 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "from threading import Event, Thread\n",
-    "\n",
-    "def task(n, event):\n",
-    "    while (not event.is_set()) and n > 0:\n",
-    "        print('T-minus', n)\n",
-    "        n -= 1\n",
-    "        time.sleep(5)\n",
-    "    print(\"Stopping, Bye!\")\n",
-    "e = Event()\n",
-    "t = Thread(target=task, args=(10,e))\n",
-    "t.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping, Bye!\n"
-     ]
-    }
-   ],
-   "source": [
-    "e.set()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Communicating between threads ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing producer-consumer.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file producer-consumer.py\n",
-    "from queue import Queue\n",
-    "\n",
-    "from threading import Thread\n",
-    "\n",
-    "def producer(out_q):\n",
-    "    while True:\n",
-    "        #Produce some data\n",
-    "        #...\n",
-    "        #...\n",
-    "        out_q.put(data)\n",
-    "        \n",
-    "        \n",
-    "def consumer(in_q):\n",
-    "    #consume data\n",
-    "    while True:\n",
-    "        #get some data\n",
-    "        data = in_q.get()\n",
-    "        #process the data\n",
-    "        #...\n",
-    "        \n",
-    "q = Queue()\n",
-    "t1 = Thread(target=producer, args=(q,))\n",
-    "t2 = Thread(target=consumer, args=(q,))\n",
-    "t1.start()\n",
-    "t2.start()\n",
-    "\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   },
