--- a/advanced/Functions.ipynb
+++ b/advanced/Functions.ipynb
@@ -1476,6 +1476,14 @@
     "P2(2) #compute P(x) for for x = 2\n",
     "7\n",
     "```\n",
+    "- **problem:** Write a function `fold` which reduces given sequence in single value using given joiner function.\n",
+    "```\n",
+    ">>> def add(x,y):\n",
+    "...     return x+y\n",
+    ">>>\n",
+    ">>> fold(add, [1,2,3,4,5], default=0)\n",
+    "15\n",
+    "```\n",
     "- **Bonus problem:** A number x is called a fixed point of a function `f` if `x` satisfies the equation `f(x) = x`. For some functions `f` we can locate a fixed point by beginning with an initial guess and applying `f` repeatedly, `f(x),f(f(x), f(f(f(x), ....` Write a python function to find fixed point of a function. it should take function as argument,  initial guess and accuracy (default = 0.0001) for equating `f(x) = x`\n",
     "```\n",
     "fixed_point(math.cos, 1, 0.0001)\n",
@@ -1634,6 +1642,41 @@
    ],
    "source": [
     "P2(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fold(joiner, seq, default):\n",
+    "    acc = default\n",
+    "    for item in seq:\n",
+    "        acc = joiner(acc, item)\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fold(lambda x,y:x+y, [1,2,3,4,5],0)"
    ]
   },
   {
