proces pool example

--- a/advanced/multithreading.ipynb
+++ b/advanced/multithreading.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,13 @@
     "import random\n",
     "import sys, time\n",
     "\n",
+    "def cputask(*args):\n",
+    "    s = 0\n",
+    "    for i in range(1000):\n",
+    "        for j in range(10000):\n",
+    "            s += i*j*1.0\n",
+    "    print(s)\n",
+    "    \n",
     "def writedata(*args):\n",
     "    filename = args[0]\n",
     "    with open(filename, \"w\") as f:\n",
@@ -282,6 +289,143 @@
    ],
    "source": [
     "!time -p python tpwrite.py 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting pwrite.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file pwrite.py\n",
+    "from multiprocessing.pool import Pool\n",
+    "import random\n",
+    "import sys, time\n",
+    "\n",
+    "def cputask(*args):\n",
+    "    s = 0\n",
+    "    for i in range(1000):\n",
+    "        for j in range(10000):\n",
+    "            s += i*j*1.0\n",
+    "    print(s)\n",
+    "    \n",
+    "def writedata(*args):\n",
+    "    filename = args[0]\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        for i in range(1000000):\n",
+    "            f.write(str(random.random()).zfill(8))\n",
+    "\n",
+    "        \n",
+    "def countdown(*args):\n",
+    "    for i in reversed(range(10)):\n",
+    "        time.sleep(0.25)\n",
+    "    print(\"Finished!\")\n",
+    "    \n",
+    "def process():\n",
+    "    concurrency = int(sys.argv[1])\n",
+    "    taskcount = 10\n",
+    "    filenames = [\"base{}\".format(i) for i in range(taskcount)]\n",
+    "    pool = Pool(concurrency)\n",
+    "    pool.map(cputask, filenames)\n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    process()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "real 16.85\n",
+      "user 16.76\n",
+      "sys 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "!time -p python pwrite.py 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "real 11.87\n",
+      "user 19.71\n",
+      "sys 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "!time -p python pwrite.py 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "24972502500000.0\n",
+      "real 10.47\n",
+      "user 34.05\n",
+      "sys 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "!time -p python pwrite.py 4"
    ]
   },
   {
